--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.7",
+    "next": "10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-view": "2.3.5"
   }
 }
